// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots max date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-9"
      id="test-9-label"
    >
      test-9
    </label>
    <div
      class="usa-hint"
      id="test-9-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
      data-max-date="2020-05-05"
    >
      <input
        aria-describedby="test-9-hint"
        aria-labelledby="test-9-label"
        class="usa-input"
        id="test-9"
        name="test-9"
      />
    </div>
  </div>
</div>
`;

exports[`compontent snapshots min date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-10"
      id="test-10-label"
    >
      test-10
    </label>
    <div
      class="usa-hint"
      id="test-10-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
      data-min-date="2020-05-05"
    >
      <input
        aria-describedby="test-10-hint"
        aria-labelledby="test-10-label"
        class="usa-input"
        id="test-10"
        name="test-10"
      />
    </div>
  </div>
</div>
`;

exports[`compontent snapshots primary datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-8"
      id="test-8-label"
    >
      test-8
    </label>
    <div
      class="usa-hint"
      id="test-8-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker"
    >
      <input
        aria-describedby="test-8-hint"
        aria-labelledby="test-8-label"
        class="usa-input"
        id="test-8"
        name="test-8"
      />
    </div>
  </div>
</div>
`;
